# Valeria.progect

./: read.txt  Раскладка клавиатуры.sln
CountingOutGame/: CountingOutGame.pro  mainwindow.cpp  mainwindow.h
DateConverter/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
EnglishTranslator/: CMakeLists.txt  en_ru.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
dictionary/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lulu/: lulu.sln
lulu/lulu/: lulu.cpp  lulu.vcxproj  lulu.vcxproj.filters
lulu/lulu/x64/Debug/: lulu.exe.recipe  lulu.ilk  vc143.idb
lulu/lulu/x64/Debug/lulu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  lulu.lastbuildstate
